<resources>
    <string name="app_name">AppPizeria_v02</string>
    <!--Strings INICIO-->
    <string name="strTvInicio">INICIO</string>
    <string name="strBtnIniciarSesionInicio">Iniciar Sesión</string>
    <string name="strBtnRegistrarseInicio">Registrarse</string>
    <!--Strings REGISTRO-->
    <string name="strTvRegistro">REGISTRO</string>
    <string name="hintUsuarioRegistro">Usuario</string>
    <string name="hintEmailRegistro">Email</string>
    <string name="hintPassRegistro">Contraseña</string>
    <string name="strBtnRegistro">GUARDAR</string>
    <!--Strings LOGIN-->
    <string name="strTvLogin">LOGIN</string>
    <string name="hintNameLogin">Email</string>
    <string name="hintPasswordLogin">Password</string>
    <string name="btnLogin">next</string>
    <string name="strCheckBoxLogin">Guardar usuario y contraseña</string>
    <!--Strings OPCIONES PIZZERÍA-->
    <string name="strSwitch">Wifi</string>
    <string name="strTvOpcionesPizzeria">MENÚ OPCIONES PIZZERÍA</string>
    <string name="strBtnOpcionWeb">web</string>
    <string name="strBtnOpcionPedido">pedido</string>
    <string name="strBtnOpcionConfiguracion">configuración</string>
    <!--Strings OPCIONES PEDIDO-->
    <string name="strTvOpcionesPedido">OPCIONES PEDIDO</string>
    <string name="strBtnDeLaCasaOpPedido">De la casa...</string>
    <string name="strBtnIngredientesOpPedido">Elige tus ingredientes...</string>
    <string name="strBtnFavoritasOpPedido">Favorita</string>

</resources>
