<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idEdtNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/hintNameLogin"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtPassLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/hintPasswordLogin"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/idEdtNameLogin"
        app:layout_constraintStart_toStartOf="@+id/idEdtNameLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEdtNameLogin" />

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:onClick="onClickBtnLogin"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/idEdtPassLogin"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPassLogin" />

    <CheckBox
        android:id="@+id/idCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/strCheckBoxLogin"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/idBtnLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/strTvLogin"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/idCheckBox"
        app:layout_constraintStart_toStartOf="@+id/idCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/idCheckBox" />
</androidx.constraintlayout.widget.ConstraintLayout>