<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOpcionesPedidoKotlin">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/strTvOpcionesPedido"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnDeLaCasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/strBtnDeLaCasaOpPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/idBtnEligeIngredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/strBtnIngredientesOpPedido"
        app:layout_constraintEnd_toEndOf="@+id/idBtnDeLaCasa"
        app:layout_constraintStart_toStartOf="@+id/idBtnDeLaCasa"
        app:layout_constraintTop_toBottomOf="@+id/idBtnDeLaCasa" />

    <Button
        android:id="@+id/idBtnFavoritas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/strBtnFavoritasOpPedido"
        app:layout_constraintEnd_toEndOf="@+id/idBtnEligeIngredientes"
        app:layout_constraintStart_toStartOf="@+id/idBtnEligeIngredientes"
        app:layout_constraintTop_toBottomOf="@+id/idBtnEligeIngredientes" />
</androidx.constraintlayout.widget.ConstraintLayout>